--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
     background-image: url("img/background_image.jpg");
-    background-repeat: repeat-y;
+    background-repeat: repeat;
     height: 100%;
     
 }
 
 header {
-    background-color: rgba(255,255,255,0.8);
+    background-color: rgba(255,255,255,0.7);
 }
 
 body {
