--- a/style.css
+++ b/style.css
@@ -1,55 +1,65 @@
 body {
-    background-image: url("img/background_image.jpg");
-    background-repeat: repeat;
-    height: 100%;
-    
+  background-image: url("img/background_image.jpg");
+  background-repeat: repeat;
+  height: 100%;
+
 }
 
 header {
-    background-color: rgba(255,255,255,0.7);
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 body {
-    background-color: white;
+  background-color: white;
 }
 
 footer {
-    color: white;
+  color: white;
 }
 
 .btn {
-    background-color: black;
-    border: 2px solid greenyellow;
-    color: white;
-    width: 100%;
+  background-color: black;
+  border: 2px solid greenyellow;
+  color: white;
+  width: 100%;
 }
 
 .btn:hover {
-    background-color: dimgrey;
+  background-color: dimgrey;
 }
 
 .btn-other {
-    border: none;
-    width: auto;
+  border: none;
+  width: auto;
 }
 
 .btn-other:hover {
-    border: none;
+  border: none;
 }
 
 h1 {
-    font-size: 4em;
-    color: black;
+  font-size: 4em;
+  color: black;
 }
 
 hr {
-    border: 1px dashed black;
+  border: 1px dashed black;
 }
 
 .double-line {
-    border-style: solid;
+  border-style: solid;
 }
 
 img {
-    width: 20%;
+  width: 20%;
+}
+
+.modal-header {
+  background-color: black;
+  color: greenyellow;
+}
+
+.modal-title {
+  font-weight: bold;
+  text-transform: uppercase;
 }
